2006-04-21 Erwann Chenede - <erwann.chenede@sun.com>
 
  * gtk-engine/nimbus_style.c : fixed GnomeFileEntry theming

2006-04-21 Erwann Chenede - <erwann.chenede@sun.com>

  * gtk-engine/nimbus_rc_style.c
    gtk-engine/nimbus_utils.c
    gtk-engine/nimbus_utils.h : ported gdk_pixbuf_rotate_simple
    to avoid dependency on gtk+ 2.6

2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>

  * make index.theme work

2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>

  * make it compatible with JDS 3 (no cairo, hardcode Minor version)

2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>

  * initial complete gtk engine commit (I said initial !)
  
2006-04-06 Erwann Chenede - <erwann.chenede@sun.com>

  * implemented combo box and a more modular custom button rendering 
    routine.

2006-04-04 Erwann Chenede - <erwann.chenede@sun.com>

  * initial commit of the engine : only the buttons are implemented.